[package]
name = "caetun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.15.0"
clap = { version = "^4.4.8", features = ["derive"] }
parking_lot = "0.12.3"
socket2 = "0.5.7"
tun-tap = "0.1.4"
nix = { version = "0.29.0", features = ["socket", "event"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
serde_ini = { git = "https://github.com/arcnmx/serde-ini.git", rev = "eb9d637" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }